# LitePad

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  README.zh-CN.md  build.bat  build.sh  build_mingw.bat  setup_windows_dev.bat
config/: default.conf
docs/: README.md  TODO.md  WINDOWS_SETUP.md  development-environment.zh-CN.md  milestones.zh-CN.md  requirements.zh-CN.md
plugins/: AutoSavePlugin.h  CMakeLists.txt  LineNumberPlugin.h  SyntaxHighlightPlugin.h  TerminalPlugin.h
src/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  PlatformWindow.cpp  PlatformWindow.h  PluginInterface.h  PluginManager.cpp  PluginManager.h  main.cpp
src/platform/linux/: LinuxWindow.cpp  LinuxWindow.h
src/platform/windows/: WindowsWindow.cpp  WindowsWindow.h
tests/: CMakeLists.txt  test_main.cpp
